--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Mr.Bean Porfolio Landing Page By Muhammad Rezaul Arif Chowdhury</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
